--- a/dashboard.html
+++ b/dashboard.html
@@ -1,4 +1,4 @@
-    <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -10,10 +10,10 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
     <style>
         body { 
-        font-family: 'Arial', sans-serif; 
-        }
-        .custom-shadow { 
-            box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06); 
+            font-family: 'Inter', sans-serif; 
+            background-color: #f3f4f6;
+            margin: 0;
+            padding: 0;
         }
         .results-container {
             display: flex;
@@ -28,11 +28,14 @@
             border-radius: 8px;
             box-shadow: 0 4px 6px rgba(0,0,0,0.1);
         }
-     </style>
+        .custom-shadow {
+            box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06); 
+        }
+    </style>
     <!-- Chart.js CDN -->
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
-<body class="bg-gray-100">
+<body>
     <nav class="bg-white bg-opacity-90 shadow-sm fixed w-full z-10">
         <div class="container mx-auto px-6 py-3 flex justify-between items-center">
             <a href="/" class="flex items-center">
@@ -49,7 +52,7 @@
     <main class="pt-20 pb-12">
         <div class="max-w-4xl mx-auto px-4">
             <h1 class="text-3xl font-bold text-center mb-10">Upload Brief & Script for Analysis</h1>
-            <div class="bg-white p-6 rounded-lg shadow">
+            <div class="bg-white p-6 rounded-lg shadow custom-shadow">
                 <form id="uploadForm" class="space-y-6">
                     <div>
                         <label for="brief" class="text-sm font-medium text-gray-700">Upload Brief</label>
@@ -63,15 +66,15 @@
                 </form>
             </div>
             <div id="resultsSection" class="results-container custom-shadow hidden">
-            <div class="chart-container">
-                <h2 class="text-2xl font-semibold mb-4">Sentiment Analysis</h2>
-                <canvas id="sentimentChart" class="mt-6"></canvas>
-            </div>
-            <div class="chart-container">
-                <h2 class="text-2xl font-semibold mb-4">Key Metrics</h2>
-                <canvas id="metricsChart" class="mt-6"></canvas>
-            </div>
-            <button id="downloadPdf" class="mt-4 bg-green-600 text-white px-6 py-2 rounded-md hover:bg-green-700">Download Complete Report</button>
+                <div class="chart-container">
+                    <h2 class="text-2xl font-semibold mb-4">Sentiment Analysis</h2>
+                    <canvas id="sentimentChart" class="mt-6"></canvas>
+                </div>
+                <div class="chart-container">
+                    <h2 class="text-2xl font-semibold mb-4">Key Metrics</h2>
+                    <canvas id="metricsChart" class="mt-6"></canvas>
+                </div>
+                <button id="downloadPdf" class="mt-4 bg-green-600 text-white px-6 py-2 rounded-md hover:bg-green-700">Download Complete Report</button>
             </div>
         </div>
     </main>
@@ -127,7 +130,7 @@
                     });
 
                     if (metricsChartInstance) {
-                        metricsChartInstance.destroy();
+                        metricsChartInstance.destroy.
                     }
 
                     const metricsCtx = document.getElementById('metricsChart').getContext('2d');
